# hydra_robot_arm

./: README.md
hydra_controller/: CMakeLists.txt  package.xml
hydra_controller/config/: hydra_controllers.yaml
hydra_controller/launch/: control_interface.launch.py  controller.launch.py
hydra_controller/src/: control_interface.cpp
hydra_description/: CMakeLists.txt  package.xml
hydra_description/config/: joint_names_hydra_description.yaml
hydra_description/launch/: display.launch.py  gazebo.launch.py
hydra_description/meshes/: base_link.STL  left_gripper_link.STL  lower_link.STL  lower_link.STL.bak  middle_link.STL  right_gripper_link.STL  rotatable_base_link.STL  upper_link.STL  wrist_link.STL
hydra_description/urdf/: hydra_description.csv  hydra_description.urdf  hydra_gazebo.xacro  hydra_ros2_control.xacro
hydra_moveit/: CMakeLists.txt  package.xml
hydra_moveit/config/: hydra.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
hydra_moveit/launch/: moveit.launch.py
